tests/miniJava/neg/000234_mutation.MiniJava
class java { public static void false ( String [ ] java ) { { } } }
